fix top bar jump

--- a/style5.css
+++ b/style5.css
@@ -214,7 +214,7 @@ table {
 .content {
 	width: 960px;
 	margin: 0 auto;
-	min-height: 692px;
+	min-height: 710px;
 	height: auto;
 	margin-top:90px;
 	/*margin-bottom: 55px;*/
@@ -251,7 +251,7 @@ table {
 	position: absolute;
 	top: 0;
 	left: 0;
-	border: 1px solid rgba(105,135,150,.5);
+	border: 1px solid rgb(105,135,150);
 	z-index: 2;
 	-webkit-transition: .15s ease-in-out;
     -moz-transition: .15s ease-in-out;
@@ -273,7 +273,7 @@ table {
 	top: 0;
 	left: 0;
 	z-index: 1;
-	border: 1px solid rgba(105,135,150,.5);
+	border: 1px solid rgb(105,135,150);
 	-webkit-transition: .15s ease-in-out;
     -moz-transition: .15s ease-in-out;
     transition: .15s ease-in-out;
@@ -467,6 +467,7 @@ table {
 	left: 1px;*/
 	color: white;
 	background-color: rgb(105,135,150);
+	border: 1px solid rgb(105,135,150);
 	-webkit-transition: .15s ease-in-out;
     -moz-transition: .15s ease-in-out;
     transition: .15s ease-in-out;
@@ -562,9 +563,6 @@ table {
 	margin-top: 20px;
 	/*min-height: 400px;
 	max-height: 450px;*/
-}
-.sort table {
-	border: 1px solid rgba(105,135,150);
 }
 .center {
 	text-align: center;
